[gd_scene load_steps=14 format=3 uid="uid://br6q4gga0uh0a"]

[ext_resource type="Script" path="res://scenes/navigation/settings/account_management/notLoggedIn.gd" id="1_1yhn0"]
[ext_resource type="Texture2D" uid="uid://smgarqhrhkfc" path="res://graphics/ui/store/background.png" id="1_oey0p"]
[ext_resource type="Texture2D" uid="uid://c54qmcjmeafig" path="res://graphics/navigation/store/store_panel@2x.png" id="2_ocblh"]
[ext_resource type="Theme" uid="uid://7happngt6m6v" path="res://themes/for_title_lbl.tres" id="4_307kq"]
[ext_resource type="Texture2D" uid="uid://ojpy8trjsj53" path="res://graphics/ui/icons/back button@2x.png" id="5_1fbb2"]
[ext_resource type="Texture2D" uid="uid://drh1fob1q1028" path="res://graphics/ui/icons/Sign In Btn@2x.png" id="5_bvpkt"]
[ext_resource type="Theme" uid="uid://dvohq554kdv3p" path="res://themes/modal_title_label.tres" id="6_326id"]
[ext_resource type="Texture2D" uid="uid://dnj6rwhlgj87o" path="res://graphics/ui/buttons/2x/backPressed_btn@2x.png" id="6_m5q1d"]
[ext_resource type="Texture2D" uid="uid://b2gssf3rdk4cw" path="res://graphics/ui/icons/Sign up btn@2x.png" id="7_wx7tt"]
[ext_resource type="Texture2D" uid="uid://ykb0brirfg4j" path="res://graphics/ui/buttons/2x/sulodPressed_btn@2x.png" id="9_5jww4"]
[ext_resource type="Texture2D" uid="uid://b7mjtnnk2gsfa" path="res://graphics/ui/buttons/2x/SignupPressed_btn@2x.png" id="11_5wdpc"]


[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4t0lc"]
content_margin_left = 7.0
content_margin_top = 5.0
content_margin_right = 7.0
content_margin_bottom = 13.0
texture = ExtResource("2_ocblh")

[sub_resource type="Theme" id="Theme_yfnx3"]
Panel/styles/panel = SubResource("StyleBoxTexture_4t0lc")

[node name="notLoggedIn" type="CanvasLayer"]
script = ExtResource("1_1yhn0")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_oey0p")
expand_mode = 1

[node name="NotLoggedInPnl" type="Panel" parent="."]
custom_minimum_size = Vector2(710, 380)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -355.0
offset_top = -163.0
offset_right = 355.0
offset_bottom = 217.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_yfnx3")

[node name="AccountLbl" type="Label" parent="NotLoggedInPnl"]
custom_minimum_size = Vector2(358, 111)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -179.0
offset_top = -50.5
offset_right = 179.0
offset_bottom = 60.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_307kq")
text = "AKAWNT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackBtn" type="TextureButton" parent="NotLoggedInPnl"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -815.0
offset_top = -35.0
offset_right = -715.0
offset_bottom = 65.0
grow_vertical = 2
scale = Vector2(1.00305, 0.993528)
texture_normal = ExtResource("5_1fbb2")
texture_pressed = ExtResource("6_m5q1d")
stretch_mode = 3

[node name="ContentVBox" type="VBoxContainer" parent="NotLoggedInPnl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -282.0
offset_top = -108.0
offset_right = 282.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="NoAccountWarningLbl" type="Label" parent="NotLoggedInPnl/ContentVBox"]
layout_mode = 2
theme = ExtResource("6_326id")
theme_override_font_sizes/font_size = 23
text = "Kailangan nimo og akawnt para magamit og makarga nimo ang kauswagan sa imong duwa padung sa ubang kahimanan bro"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="LoginSignupHbox" type="HBoxContainer" parent="NotLoggedInPnl/ContentVBox"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 25
alignment = 1

[node name="LoginBtn" type="TextureButton" parent="NotLoggedInPnl/ContentVBox/LoginSignupHbox"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("5_bvpkt")
texture_pressed = ExtResource("9_5jww4")
stretch_mode = 3

[node name="SignupBtn" type="TextureButton" parent="NotLoggedInPnl/ContentVBox/LoginSignupHbox"]
layout_mode = 2
texture_normal = ExtResource("7_wx7tt")
texture_pressed = ExtResource("11_5wdpc")
stretch_mode = 3
